-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11
-
Component/s: hotspot
-
b20
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8206742 | 12 | Martin Buchholz | P2 | Resolved | Fixed | team |
| JDK-8206517 | 11.0.1 | Martin Buchholz | P2 | Resolved | Fixed | b01 |
src/hotspot/os_cpu/bsd_x86/os_bsd_x86.cpp got fixed in
8181503: Can't compile hotspot with c++11
Summary: Fixed 5 unique c++14 compiler issues
Reviewed-by: coleenp, dholmes, kbarrett
but those same fixes need to be applied to the Linux equivalent.
Here's another one:
src/hotspot/share/utilities/debug.cpp:718: error: comparison between pointer and integer ('void *' and 'bool')
if (memcpy(&g_stored_assertion_context, context, sizeof(ucontext_t)) == false) {
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~
8181503: Can't compile hotspot with c++11
Summary: Fixed 5 unique c++14 compiler issues
Reviewed-by: coleenp, dholmes, kbarrett
but those same fixes need to be applied to the Linux equivalent.
Here's another one:
src/hotspot/share/utilities/debug.cpp:718: error: comparison between pointer and integer ('void *' and 'bool')
if (memcpy(&g_stored_assertion_context, context, sizeof(ucontext_t)) == false) {
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~
- backported by
-
JDK-8206517 more Linux clang compile failures
-
- Resolved
-
-
JDK-8206742 more Linux clang compile failures
-
- Resolved
-
- relates to
-
JDK-8181503 Can't compile hotspot with c++11
-
- Resolved
-