8205199: more Linux clang compile failures

Co-authored-by: Thomas Stuefe <thomas.stuefe@gmail.com>
Reviewed-by: dholmes, kbarrett, stuefe